feat(api): Add error handling for get endpoints
- Add error handling on Get All tasks
- Implement handling on get by id task
- Add pagination when getting all tasks